<resources>
    <string name="app_name">Cleaning</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_add">Add</string>
    <string name="action_search">Search</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_add_room">Add Room</string>
    <string name="title_activity_edit_room">Edit Room</string>
    <string name="title_activity_schedule_room">Schedule Room</string>

    <string name="button_store">Store</string>
    <string name="button_read">Read</string>
    <string name="button_boot">Boot</string>

    <string name="hello_world">Hello world!</string>
</resources>
