<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yuioyuio.cleaning.activities.AddRoom">

    <TextView android:id="@+id/view_message" android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/random" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- room -->
    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <!-- subtype1 -->
    <Spinner
        android:id="@+id/subtype1_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <!-- subtype2 -->
    <Spinner
        android:id="@+id/subtype2_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/room_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <EditText
        android:id="@+id/reminder"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_store"
        android:onClick="storeData" />

</RelativeLayout>
